--- a/templates/accounts/profile_detail.html
+++ b/templates/accounts/profile_detail.html
@@ -20,7 +20,7 @@
             <h3>Listings by {{profile_user.get_full_name }}</h3>
             <hr>
             {% if user_listings %}
-            <div class="row row-cols-1 row-cols-md-2 row-cols-lg-2 g-4">
+            <div class="row row-cols-3 row-cols-md-4 row-cols-lg-6 g-4">
                 {% for listing in user_listings %}
                 <div class="col">
                     <div class="card h-100 shadow-sm listing-card">
@@ -38,9 +38,9 @@
                         <div class="card-body">
                             <div>
                                 <a href="{{ listing.get_absolute_url }}" class="text-decoration-none text-dark">
-                                    <h5 class="listing-card-title">{{ listing.title }}</h5>
+                                    <h5 class="listing-profile-title">{{ listing.title }}</h5>
                                 </a>
-                                <span class="listing-card-price">₱{{ listing.price|philippine_currency }}</span>
+                                <span class="listing-profile-price">₱{{ listing.price|philippine_currency }}</span>
                             </div>
                         </div>
                     </div>
