--- a/templates/listings/listing_detail.html
+++ b/templates/listings/listing_detail.html
@@ -33,7 +33,7 @@
                     <div class="d-flex justify-content-between align-items-start">
                         <h1 class="listing-detail-title">{{ listing.title }}</h1>
                         {% if user.is_authenticated and user != listing.seller %}
-                            <button class="btn btn-link save-button p-0" data-url="{% url 'listings_api:toggle_save_listing' pk=listing.pk %}">
+                            <button class="btn save-button p-0" data-url="{% url 'listings_api:toggle_save_listing' pk=listing.pk %}">
                                 <i class="{% if is_saved %}fas fa-heart text-danger{% else %}far fa-heart{% endif %} fa-2x"></i>
                             </button>
                         {% endif %}
@@ -103,7 +103,7 @@
                     </div>
                      {% if user.is_authenticated and user != listing.seller %}
                         <a href="{% url 'messaging:send_message' recipient_username=listing.seller.username %}" class="outline-btn-dark font-bold bg-warning btn w-100">Message Seller</a>
-                     {% endif %}
+                     {% endif %} <p class="text-success fw-bold mb-2">In Stock: {{ listing.stock }}</p>
                 </div>
                 <div class="card-footer bg-transparent border-top-0">
                     {% if user.is_authenticated %}
@@ -112,7 +112,7 @@
                             <a href="{% url 'listings:listing_delete' pk=listing.pk %}" class="btn btn-danger w-100">Delete</a>
                         {% else %}
                             {% if listing.status == 'available' and listing.stock > 0 %}
-                                <p class="text-success fw-bold mb-2 text-center">In Stock: {{ listing.stock }}</p>
+
                                 <a href="{% url 'listings:add_to_cart' pk=listing.pk %}" class="btn btn-success btn-lg w-100">Add to Cart</a>
                             {% else %}
                                 <p class="text-danger fw-bold mb-2 text-center">Out of Stock</p>
@@ -130,7 +130,7 @@
 {% endblock %}
 
 {% block extra_js %}
-<script>
+    <script>
 document.addEventListener('DOMContentLoaded', function() {
     const saveButton = document.querySelector('.save-button');
     if (saveButton) {
